<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tour_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/discover_herten"
        style="@style/CategoryStyle"
        android:background="@color/category_discover"
        android:text="@string/category_discover_herten" />

    <TextView
        android:id="@+id/sport"
        style="@style/CategoryStyle"
        android:background="@color/category_sport"
        android:text="@string/category_sport" />

    <TextView
        android:id="@+id/companies"
        style="@style/CategoryStyle"
        android:background="@color/category_companies"
        android:text="@string/category_companies" />

    <TextView
        android:id="@+id/hotels"
        style="@style/CategoryStyle"
        android:background="@color/category_hotels"
        android:text="@string/category_hotels" />

    <TextView
        android:id="@+id/restaurants"
        style="@style/CategoryStyle"
        android:background="@color/category_restaurant"
        android:text="@string/category_restaurants" />

</LinearLayout>